--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "edge",
+    "name": "edge-custom",
     "description": "A Ghost theme",
     "version": "1.0.0",
     "private": true,
@@ -59,16 +59,6 @@
                     "Elegant serif"
                 ],
                 "default": "Modern sans-serif"
-            },
-            "show_related_posts": {
-                "type": "boolean",
-                "default": true,
-                "group": "post"
-            },
-            "related_posts_title": {
-                "type": "text",
-                "default": "You might also like...",
-                "group": "post"
             }
         }
     },
@@ -88,7 +78,7 @@
         "gulp-livereload": "4.0.2",
         "gulp-postcss": "10.0.0",
         "gulp-uglify": "3.0.2",
-        "gulp-zip": "6.1.0",
+        "gulp-zip": "5.1.0",
         "ordered-read-streams": "2.0.0",
         "postcss": "8.5.3",
         "postcss-easy-import": "4.0.0",
