--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "edge-custom",
+    "name": "edge-blog",
     "description": "A Ghost theme",
     "version": "1.0.0",
     "private": true,
@@ -8,16 +8,15 @@
     },
     "license": "MIT",
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org"
+        "name": "Alex Pardoe",
+        "url": "https://pardoe.io"
     },
     "keywords": [
         "ghost",
         "theme",
         "ghost-theme"
     ],
-    "docs": "https://edge.ghost.io/about/",
+    "docs": "https://github.com/digitalpardoe/ghost-edge-blog",
     "config": {
         "posts_per_page": 10,
         "image_sizes": {
