Add author email

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "author": {
         "name": "Alex Pardoe",
+        "email": "alex@pardoe.io",
         "url": "https://pardoe.io"
     },
     "keywords": [
